k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/part-of: mazen-devops-portfolio
